# advanced_research_computing_docker

./: 14_Parallelisation.ipynb  Dockerfile  add_numbers.py  chrono_timer.cpp  data.csv  data_reader.cpp  data_reader_class.cpp  data_reader_class_buggy.cpp  firstprivate_lastprivate.cpp  hello_world.cpp  hello_world_sync.cpp  hello_world_sync_race.cpp  mpi.cpp  mpi_ping_pong.cpp  mpi_send_recv.cpp  numerical_integration.cpp  numerical_integration_solution.cpp  numerical_integration_solution_parallelfor.cpp  numerical_integration_solution_reduction  numerical_integration_solution_reduction.cpp  openmp.cpp  scheduling.cpp  scheduling_chunk.cpp  threadprivate.cpp  timeh_timer.cpp
JRF/Snippets/: Dockerfile.cmake  Dockerfile.fort
JRF/Snippets/CMake/HelloWorld/: CMakeLists.txt
JRF/Snippets/CMake/Project/: CMakeLists.txt
JRF/Snippets/CMake/Project/src/: CMakeLists.txt  (+1 more)
JRF/Snippets/F77/: Controlflow.f  HelloWorld.f  Intrinsics.f  Subprograms.f
JRF/Snippets/F90/: Intrinsics.f90  arrays.f90  io.f90  module1.f90  module2.f90  overload.f90  types.f90  usemodule.f90
JRF/Snippets/GoogleTest/: CMakeLists.txt
JRF/Snippets/GoogleTest/cmake/: Doxygen.cmake
JRF/Snippets/GoogleTest/src/: CMakeLists.txt
JRF/Snippets/GoogleTest/src/harmonic/: harmonic.cpp  harmonic.hpp
JRF/Snippets/GoogleTest/test/: CMakeLists.txt  test_harmonic.cpp
JRF/Snippets/Make/: Makefile
JRF/Snippets/Tools/: CMakeLists.txt
JRF/Snippets/Tools/cmake/: ClangFormat.cmake  ClangTidy.cmake
JRF/Snippets/Tools/src/: main.cpp
oneAPI/00_Introduction_to_Jupyter/src/: .Introduction_to_Jupyter.mp4.icloud
(+4 files in other folders)
